--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "connect-mongo": "^1.3.2",
+    "connect-multiparty": "^2.0.0",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "jade": "^1.11.0",
     "moment": "^2.18.1",
     "mongoose": "^4.10.2",
-    "connect-multiparty": "^2.0.0"
+    "morgan": "^1.9.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.12",
